--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,63 @@
     transform: rotate(360deg);
   }
 }
+
+
+.task-main{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 20px;
+}
+.tasktracker-main h1{
+  margin-bottom: 0px;
+  font-size: 48px;
+}
+.add-task-feature{
+  display: flex
+;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.add-task-feature a{
+  text-decoration: none;
+  border: 1px solid grey;
+  padding: .375rem;
+  border-radius: .375rem;
+  color: grey;
+  margin-inline: 20px;
+}
+.title-div{
+  padding-bottom: 40px;
+}
+.filter-btn{
+  border: 1px solid grey;
+  padding: .375rem;
+  border-radius: .375rem;
+  color: grey;
+}
+.filter-btn:hover{
+  background-color: grey;
+  color: #fff;
+
+}
+.add-task-feature a:hover{
+  background-color: grey;
+  color: #fff;
+
+}
+.input-area {
+  position: absolute;
+  right: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 90px;
+}
+a.btn-success {
+  margin-inline: 10px;
+}
+.title-div .form-control {
+  width: 25% !important;
+}
